# aligned-chess

./: LICENSE.txt  Makefile  README.md
contracts/script/: Deploy.s.sol
contracts/src/: ZKChess.sol
program/: Cargo.toml
program/elf/: commitment  riscv32im-succinct-zkvm-elf
program/src/: gameparse.rs  main-complex.rs  main.rs
script/: Cargo.toml
script/src/: gameparse.rs  main.rs
